<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="f"
            android:visibility="invisible" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/activity" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/date" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/duration" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/location" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.thepegeekapps.easypd.view.VerticalTextView
            android:id="@+id/type"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="#ff0000" />
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:background="@drawable/input_background" />
        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:background="@drawable/input_background" />
        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:background="@drawable/input_background" />
        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:gravity="center"
            android:background="@drawable/input_background" />
    </LinearLayout>

</LinearLayout>