<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flipper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:background="@drawable/titlebar_background">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"
	            android:textStyle="bold"
	            android:layout_centerInParent="true"
	            android:text="@string/set_date" />
	        <Button
	            android:id="@+id/timeBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/white"
	            android:textStyle="bold"
	            android:layout_alignParentRight="true"
	            android:background="@drawable/btn_background"
	            android:text="@string/time" />
	    </RelativeLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	        <com.thepegeekapps.easypd.view.wheel.WheelView
		        android:id="@+id/monthWheel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="4" />
	        <com.thepegeekapps.easypd.view.wheel.WheelView
		        android:id="@+id/dayWheel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"/>
	        <com.thepegeekapps.easypd.view.wheel.WheelView
		        android:id="@+id/yearWheel"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2" />
	    </LinearLayout>
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:background="@drawable/titlebar_background">
	        <Button
	            android:id="@+id/dateBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/white"
	            android:textStyle="bold"
	            android:layout_alignParentLeft="true"
	            android:background="@drawable/btn_background"
	            android:text="@string/date" />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"
	            android:textStyle="bold"
	            android:layout_centerInParent="true"
	            android:text="@string/set_time" />
	    </RelativeLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center_horizontal"
	        android:orientation="horizontal">
	        <com.thepegeekapps.easypd.view.wheel.WheelView
	            android:id="@+id/hoursWheel"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" />
	        <com.thepegeekapps.easypd.view.wheel.WheelView
	            android:id="@+id/minutesWheel"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" />
	        <com.thepegeekapps.easypd.view.wheel.WheelView
	            android:id="@+id/ampmWheel"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" />
	    </LinearLayout>
    
    </LinearLayout>

</ViewFlipper>