<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <include android:id="@+id/title" layout="@layout/titlebar" />
        
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_below="@+id/title"
        android:src="@drawable/top_shadow" />
    
    <Button
	    android:id="@+id/viewingBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/title"
	    android:background="@drawable/btn_background"
	    android:textColor="@android:color/white"
	    android:textStyle="bold"
	    android:layout_marginLeft="120dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginRight="10dp"
	    android:text="@string/viewing" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/total"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/you_currently_have" />
        
        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/input_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:gravity="center" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/prof_dev_time_completed" />
        
    </RelativeLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:src="@drawable/bottom_shadow" />
    
    <ImageView
        android:id="@+id/ribbon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ribbon"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="7dp" />
    
</RelativeLayout>