<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.thepegeekapps.easypd"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <include android:id="@+id/title" layout="@layout/titlebar" />
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_below="@+id/title"
        android:src="@drawable/top_shadow" />  
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title"
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_background"
                android:hint="@string/activity"
                android:layout_marginLeft="120dp"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:inputType="textCapWords|textNoSuggestions" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                
                <EditText
	                android:id="@+id/location"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginRight="8dp"
	                android:background="@drawable/input_background"
	                android:hint="@string/location"
	                android:padding="5dp"
	                android:textColor="@android:color/white"
	                android:inputType="textCapWords|textNoSuggestions" />
                
                <com.thepegeekapps.easypd.view.SwitchView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    custom:internalText="@string/internal"
                    custom:externalText="@string/external" />
                
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
	                android:id="@+id/startDate"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginRight="8dp"
	                android:background="@drawable/input_background"
	                android:padding="10dp"
	                android:textSize="14sp"
	                android:textColor="@android:color/white"
	                android:clickable="true"
	                android:singleLine="true"
	                android:ellipsize="end"
	                android:layout_gravity="left|center_vertical"
	                android:inputType="none" />
                <TextView
	                android:id="@+id/duration"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginLeft="8dp"
	                android:background="@drawable/input_background"
	                android:padding="10dp"
	                android:textSize="14sp"
	                android:textColor="@android:color/white"
	                android:clickable="true"
	                android:layout_gravity="left|center_vertical"
	                android:inputType="none" />
            </LinearLayout>
            
            <EditText
                android:id="@+id/explanation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:gravity="top|left"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:inputType="textCapSentences|textMultiLine|textNoSuggestions"
                android:background="@drawable/input_background" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/input_background">
                
                <Button 
                    android:id="@+id/selectActionBtn" 
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
        			android:textColor="@android:color/white"
                    android:background="@drawable/btn_background"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/select_action" />
                
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
			        android:paddingRight="11dp"
			        android:paddingTop="4dp"
			        android:paddingBottom="13dp"
                    android:background="@drawable/image_frame">
                    
                    <ImageView 
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:paddingLeft="5dp" />
                
	                <ImageView
	                    android:id="@+id/noImage"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_centerInParent="true"
	                    android:src="@drawable/no_image" />
                
                </RelativeLayout>
                                
            </LinearLayout>
            	
        
    </LinearLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:src="@drawable/bottom_shadow" />
    
    <ImageView
        android:id="@+id/ribbon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ribbon"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="7dp" />
    
</RelativeLayout>